log/build_2026-02-15_18-56-52/object_detection/stderr.log
  File "/home/tom/Documents/Dog_Fight/install/object_detection/lib/python3.10/site-packages/object_detection/gps_tracker.py", line 78
    ağ kolum uyuşuyor neden
        ^^^^^
SyntaxError: invalid syntax

